fixed hints section overlapping header

--- a/src/Components/Hints/style.module.scss
+++ b/src/Components/Hints/style.module.scss
@@ -1,7 +1,6 @@
 .Hints{
-    padding-top: var(--headerHeight);
     position: fixed;
-    top: 0;
+    top: var(--headerHeight);
     right: 0;
     display: flex;
     justify-content: flex-start;
